fix #2542: improve nav label wrapping in dashboard

--- a/src/common/ui/style/style.css
+++ b/src/common/ui/style/style.css
@@ -515,6 +515,12 @@ input[type].has-error {
   }
 }
 
+@media (max-width: 767px) {
+  .hidden-m {
+    display: none !important;
+  }
+}
+
 @media (max-width: 550px) { /* This value is also used in other files */
   .hidden-sm {
     display: none !important;
